--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -6,7 +6,9 @@
     <title>E-Commerce</title>
  <!-- Bootstrap 5 CSS -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
- 
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
 <script src="./Bootstrap.js"></script>
     <!-- Custom CSS -->
     <style>
@@ -128,7 +130,9 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                      <a class="btn btn-light me-1" aria-current="page" href="#">Categories</a>
+                      <!-- SOLD BUTTON -->
+                        <button id="btnSoldItems" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#soldItemsModal">View Sold Items</button>
+
                   </li>
                   <!-- Add Product -->
                   <li>
@@ -264,7 +268,7 @@
                       </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Continue Shopping</button>
-                          <button type="button" class="btn btn-success">Checkout</button>
+                          <button type="button" class="btn btn-success"id="btnCheckout">Checkout</button>
                       </div>
                   </div>
               </div>
@@ -308,10 +312,44 @@
                   </div>
               </div>
           </div>
+          <!-- Info Product Modal -->
+            <div class="modal fade" id="infoProductModal" tabindex="-1" aria-labelledby="infoProductModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="infoProductModalLabel" style="color: #3498db; font-family: 'Arial', sans-serif;">Product Information</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body" style="text-align: center; color: #555; font-family: 'Helvetica', sans-serif;">
+                            <!-- Content to display product information -->
+                            <div id="infoProductName" style="font-size: 18px; font-weight: bold; margin-bottom: 10px;"></div>
+                            <div id="infoProductDescription" style="font-size: 14px;"></div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="background-color: #ecf0f1; color: #333;">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+           
+            <!-- SOLD ITEMS MODAL -->
+            <div class="modal fade" id="soldItemsModal" tabindex="-1" aria-labelledby="soldItemsModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="soldItemsModalLabel">Sold Items</h5>
+                        </div>
+                        <div class="modal-body text-center"> <!-- Center the content -->
+                            <div id="soldItemsContainer" class="row"></div>
+                        </div>
+                        <div class="modal-footer d-flex justify-content-between" style="border-top: 1px solid #dee2e6;">
+                        </div>
+                    </div>
+                </div>
+            </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </body>
 </html>
