--- a/Bootstrap.html
+++ b/Bootstrap.html
@@ -7,9 +7,6 @@
  <!-- Bootstrap 5 CSS -->
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
-<script src="./Bootstrap.js"></script>
     <!-- Custom CSS -->
     <style>
         .dashboard {
@@ -322,7 +319,7 @@
                     </div>
                 </div>
             </div>
-          <!-- Info Product Modal -->
+                               <!-- Info Product Modal -->
             <div class="modal fade" id="infoProductModal" tabindex="-1" aria-labelledby="infoProductModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
@@ -350,7 +347,7 @@
                         <div class="modal-header">
                             <h5 class="modal-title" id="soldItemsModalLabel">Sold Items</h5>
                         </div>
-                        <div class="modal-body text-center"> <!-- Center the content -->
+                        <div class="modal-body text-center">
                             <div id="soldItemsContainer" class="row"></div>
                         </div>
                         <div class="modal-footer d-flex justify-content-between" style="border-top: 1px solid #dee2e6;">
@@ -361,5 +358,14 @@
 </div>
 
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"></script>
+
+<!-- Popper.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXZnuCFPNEFIFATk4JFAFnkz/yo8yI+QI3Tj" crossorigin="anonymous"></script>
+
+<script src="./Bootstrap.js"></script>
 </body>
 </html>
